CHANGELOG -- $Id: changelog 121 2007-03-28 14:10:41Z shred $

R14
  * Added EmptyTableModel
  * Added PhpSerializer
  * Napkin L&F added to the JLAFSelector (http://napkinlaf.sourceforge.net/)
  * JToolbarButton constructor now also supports button titles.

R13 (2006-07-26)
  * Removed all JDK1.3 compatibilty code.
  * Switched to Subversion
  * Added junit to the project, so there are no Eclipse SDK dependency
    issues any more.
  * Forgot some serialVersionUIDs.
  * Added UncloseableInputStream and UncloseableOutputStream.
  * HTTPRequest: a DataProvider now cannot unintentionally close the
    OutputStream.
  * HTTPRequest now gives access to the InputStream for binary results.
  * HTTPRequest: forgot to explicitely set POST request method. It was
    still working because of some internal Java magic.
  * JImageViewer is now Printable.

R12 (2005-12-27)
  * NOTE: R12 is the last release that is JDK1.3 compatible. Starting from
    R13, at least JDK1.4 will be required.
  * Reduced memory consumption of JIntegerFilter.
  * JHistoryTextField will not trigger an event if a selection was made from
    the combobox or the component just lost the focus.
  * BUGFIX: JToolbarButton uses setContentAreaFilled() instead of
    setOpaque() like it is required in the JDK docs.
  * SwingUtils' setMenuKey() now only sets correct mnemonics.
  * BUGFIX: JImageViewer was only usable in Java5.
  * BUGFIX: If a JSortedTable model was changed, it was shown in the model
    sequence, even though it was internally thought as sorted by a column.
  * BUGFIX: JCollapsiblePanel didn't revalidate the GUI, thus on collapse
    only the content was hidden, but no space was given free.
  * JCollapsiblePanel now remembers the collapse state optionally. Requires
    JDK1.4 or later.
  * Offered a way to add weak listener references.
  * Added ArrowIcon class which can be used to paint small arrows.

R11 (2005-04-04)
  * NOTE: R11 was not released to the public